<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OdeskTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_login">Login</string>
    <string name="menu_solutions">Solutions</string>
    <string name="menu_offers">Offers</string>
    <string name="menu_faqs">Faqs</string>
    <string name="menu_store_finder">Store Finder</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_music">Music</string>

    <string-array name="menu_array">
        <item>@string/menu_home</item>
        <item>@string/menu_profile</item>
        <item>@string/menu_login</item>
        <item>@string/menu_solutions</item>
        <item>@string/menu_offers</item>
        <item>@string/menu_faqs</item>
        <item>@string/menu_store_finder</item>
        <item>@string/menu_contact_us</item>
        <item>@string/menu_music</item>
    </string-array>
    
    <string name="profile_text">CallSat was established in 1999 in Cyprus and is an alternative in the telecommunication sector,
         a fully developed and integrated licensed provider. In order to provide access to the most developed international
          telecommunication systems, CallSat offers world-wide connectivity to primary level providers. Whether you are
           transferring data, IP, voice or video communication, or even a complete package, CallSat is the ideal provider.
          We offer all the benefits of the latest technology. We have also formed strategic alliances with the leaders in
           global communication, in order to create a network of high-performance, and deliver optimized products and
            services to our clients\' advanced needs. Reliability, security and speed are the features that all telecommunication
             services should provide. These traits are CallSat core values.
          The highly trained and capable service staff can provide our customers, in addition to cutting-edge technologies and
           services, with the information and support they need.       
    </string>

    <!-- HEADER TEXT -->
    <string name="profile_header">&lt; Profile</string>
    <string name="login_header">&lt; Login</string>
    <string name="solutions_header">&lt; Solutions</string>
    <string name="offer_header">&lt; Offers</string>
    <string name="laptop_header">&lt; Laptops</string>
    <string name="mobile_header">&lt; Mobiles</string>
    <string name="special_offer_header">&lt; Special Offers</string>
    <string name="music_header">&lt; Music</string>
    <string name="faq_header">&lt; Faqs</string>
    <string name="contact_us_header">&lt; Contact Us</string>
    <string name="store_finder_header">&lt; Store Finder</string>
    
    <!-- Login Screen -->
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    
    <!-- Solutions Screen -->
    <string name="business">Business</string>
    <string name="individual">Individual</string>
    <string name="business_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</string>
    <string name="individual_text">Quisque commodo egestas purus non pretium. Fusce ac elit quis lorem placerat vestibulum nec quis est. Pellentesque vitae ipsum tellus, et euismod lacus. Aenean mi diam, laoreet vel condimentum eget, rutrum eu tellus. In malesuada cursus consequat. Sed at pharetra odio. Donec condimentum molestie sodales. Nunc varius aliquam odio vel molestie.</string>
    
    <!-- Faqs Screen -->
    <string name="voice">Voice</string>
    <string name="internet">Internet</string>
    <string name="mobile">Mobile</string>
    <string name="voice_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</string>
    <string name="internet_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</string>
    <string name="mobile_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</string>
    
    <string name="title_activity_home">HomeActivity</string>
    <string name="home_text">Complete range of
    TELECOMMUNICATION SERVICES
    for business &amp; individuals</string>
    <string name="site">View Site</string>
</resources>
