<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_activity_prifle"
    android:background="@color/dark_blue"
    android:weightSum="1"
    android:orientation="vertical" >

    <Button 
        android:id="@+id/contact_us_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/header_text_size"
        android:background="@color/dark_blue"
        android:paddingBottom="5dp"
        android:text="@string/contact_us_header"/>

    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.166"
		android:orientation="vertical" >
		
	    <EditText
	        android:id="@+id/contact_us_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/name"
	        android:inputType="textPersonName" >

	        <requestFocus />
	    </EditText>
	    
	</LinearLayout>
	
     <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.166"
		android:orientation="vertical" >
	    
	    <EditText
	        android:id="@+id/contact_us_email"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/email"
	        android:inputType="textEmailAddress" />
	    
	</LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.166"
		android:orientation="vertical" >
	    
	    <EditText
	        android:id="@+id/contact_us_phone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/phone_number"
	        android:inputType="phone" />
	    
	</LinearLayout>

    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="0.5" >
	    
	    <EditText
	        android:id="@+id/contact_us_message"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/message"
	        android:inputType="textMultiLine" />
	
	    <Button
	        android:id="@+id/contact_us_submit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentBottom="true"
	        android:background="@color/light_blue"
	        android:text="@string/submit" />
	    
	</RelativeLayout>

</LinearLayout>
